<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MyAccountActivity"
    android:layout_margin="5pt"
    android:background="@drawable/borderfill"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_account_title"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:gravity="center"
        android:padding="5pt" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:src="@drawable/myaccount"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ahmad_furqan"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:gravity="center"
        android:paddingTop="5pt" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_email"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_quote"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic"
        android:layout_margin="5pt"
        android:gravity="center"/>

</LinearLayout>