<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/borderfill"
    android:layout_marginHorizontal="5pt"
    android:layout_marginBottom="5pt">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_photo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        tools:src="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/img_item_photo"
        android:layout_toRightOf="@id/img_item_photo"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            tools:text="@string/cats_name" />

        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            tools:text="@string/cats_detail" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_set_detil"
                android:layout_width="match_parent"
                android:layout_height="130px"
                android:layout_weight="1"
                android:text="@string/detil"
                android:textSize="12sp"
                android:layout_marginRight="5pt"/>

            <Button
                android:id="@+id/btn_set_share"
                android:layout_width="match_parent"
                android:layout_height="130px"
                android:text="@string/share"
                android:textSize="12sp"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>